--- a/src/App.scss
+++ b/src/App.scss
@@ -2,5 +2,7 @@
 
 #App {
     min-height: 100vh;
-    // background-color: $grey;
+    background-color: $silver;
+    // background-color: $black;
+
 }
