--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -6,12 +6,13 @@
 // Fonts
 // $lato: lato;
 
+*{border: 1px solid red;}
+
 // Colors
-// $darkBlue: rgb(27, 55, 75);
-// $blue: hsl(205, 47%, 30%);
-// $lightBlue: hsl(205, 47%, 60%);
-// $grey: hsl(100, 3%, 90%);
-// $brighterGrey: hsl(100, 3%, 94%);
+$silver: rgb(211,211,211);
+$black: #19161A;
+$white: hsl(0, 0%, 90%);
+$red-logo: #FF4057;
 
 // Media
 $threshold1: 576px;
