--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,18 @@
 #App {
     min-height: 100vh;
     background-color: $silver;
-    // background-color: $black;
-
 }
+
+/* Scrollbar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 12px hsl(74, 80%, 26%);
+}
+::-webkit-scrollbar-thumb {
+    background-color: $red-logo;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: hsl(74, 80%, 31%);
+  }
