--- a/src/sass/components/Home.scss
+++ b/src/sass/components/Home.scss
@@ -16,7 +16,8 @@
         .__wrapper {
             p {
                 font-size: 2em;
-                text-align: center;
+                // text-align: center;
+                text-align: left;
                 margin: 0;
                 line-height: 0;
                 &:nth-of-type(3) {
@@ -33,8 +34,9 @@
             border-right: .15em solid orange;
             white-space: nowrap;
             animation: typing 2400ms steps(32) infinite;
+            // animation: typing 2400ms steps(32);
             font-size: 1.6rem;
-            width: 0;
+            width: 100%; // Change for 0
             @keyframes typing {
                 from { width: 0 }
                 to { width: 100% }
