--- a/src/sass/components/Header.scss
+++ b/src/sass/components/Header.scss
@@ -17,8 +17,10 @@
     }
         
     .Header__menu li {
+        font-family: aeonik;
+        font-size: 18px;
         display: inline-block;
-        padding: 8px;
+        padding: 9px;
     }
     
     .Header__flags {
