--- a/src/sass/components/About.scss
+++ b/src/sass/components/About.scss
@@ -1,3 +1,5 @@
+// @import '../helpers/variables.scss';
+
 #About {
     background-image: url('../../assets/about/computers.jpg');
     background-position: center;
