--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -22,6 +22,9 @@ $animations: 1s;
 // Slider's icon's width
 $icon-width: 200px;
 
+// Header's height
+$header-height: 130px;
+
 // Media
 $threshold1: 576px;
 $threshold2: 768px;
