About section completed

--- a/src/sass/components/About.scss
+++ b/src/sass/components/About.scss
@@ -1,14 +1,14 @@
 @import '../helpers/variables.scss';
 
 #About {
-  .__computers {
+  .__wallpaper1 {
     background-image: url('../../assets/about/computers.jpg');
     background-position: center;
     height: 100vh;
 
   }
-  .__people {
-    background-image: url('../../assets/about/people.jpg');
+  .__wallpaper2 {
+    background-image: url('../../assets/about/laptop.jpg');
     background-position: center;
     height: 100vh;
 
@@ -19,12 +19,12 @@
     position: absolute;
     z-index: 1;
     .__text {
-      margin: 30px auto 0;
+      margin: 10px auto 0;
       // display: inline-block;
-      backdrop-filter: blur(10px);
+      backdrop-filter: blur(20px);
       width: 370px;
       padding: 10px 10px 0;
-      border-radius: 20px;;
+      border-radius: 20px;
       .__text-animated {
         // height: 400px;
         font-family: aeonik, monospace;
