--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -7,7 +7,7 @@
     src: url('../../assets/fonts/Aeonik-Pro-Light.ttf');
 }
 
-*{border: 1px solid red;}
+// *{border: 1px solid red;}
 
 // Colors
 $silver: rgb(211,211,211);
