--- a/src/sass/components/Preloader.scss
+++ b/src/sass/components/Preloader.scss
@@ -2,8 +2,9 @@
 
 
 #Preloader {
-    // position: fixed;
+    position: fixed;
     z-index: 5;
+    top: 0;
     height: 100vh;
     width: 100vw;
     background-color: black;
@@ -35,8 +36,6 @@
                 margin-bottom: 10px;
                 path {
                     color: $red-logo;
-                    // animation: colorChange $animations;
-                    // animation: show $animations;
                     animation: show 2.5s;
                     fill: $red-logo;
                 }
