--- a/src/sass/components/Projects.scss
+++ b/src/sass/components/Projects.scss
@@ -3,6 +3,23 @@
 #Projects {
     height: 600px;
     background-color: $black;
-    display: flex;
     justify-content: space-around;
+    h1 {
+        font-family: roboto;
+        font-size: 40px;
+        // text-decoration: underline solid $red-logo 1px;
+        text-decoration: underline solid $silver 1px;
+        text-underline-offset: 8px;   
+        // color: $silver;
+        color: $red-logo;
+        display: block;
+        text-align: center;
+        padding: 32px 0;
+        margin: 0;
+    }
+    .__cards {
+        display: flex;
+        // justify-content: center;
+        justify-content: space-evenly;
+    }
 }
