--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -12,8 +12,18 @@
     // src: url('../../assets/fonts/Roboto-Regular.ttf');
     src: url('../../assets/fonts/Roboto-Light.ttf');
 }
+@font-face {
+    font-family: "geom";
+    // font-family: "Geom Graphic W03 Regular";
+    src: url("https://db.onlinewebfonts.com/t/b0b8a10e9c97391e66297c8b5398984f.eot");
+    src: url("https://db.onlinewebfonts.com/t/b0b8a10e9c97391e66297c8b5398984f.eot?#iefix")format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/b0b8a10e9c97391e66297c8b5398984f.woff2")format("woff2"),
+    url("https://db.onlinewebfonts.com/t/b0b8a10e9c97391e66297c8b5398984f.woff")format("woff"),
+    url("https://db.onlinewebfonts.com/t/b0b8a10e9c97391e66297c8b5398984f.ttf")format("truetype"),
+    url("https://db.onlinewebfonts.com/t/b0b8a10e9c97391e66297c8b5398984f.svg#Geom Graphic W03 Regular")format("svg");
+}
 
-*{border: 1px solid red;}
+// *{border: 1px solid red;}
 
 // Colors
 $silver: rgb(211,211,211);
@@ -31,6 +41,13 @@ $slider-height: 150px;
 
 // Header's height
 $header-height: 130px;
+
+// "Projects" section's variables
+
+
+// Parameters of form's text area and button 
+$textarea__button-width: 100px;
+// $textbox-width: 100%;
 
 // Media
 $threshold1: 576px;
