--- a/src/sass/components/Contact.scss
+++ b/src/sass/components/Contact.scss
@@ -7,10 +7,20 @@
     display: flex;
     justify-content: center;
     height: 900px;
-    .__img-background {
+    .__background {
+        position: relative;
         width: 50%;
-        // height: 300px;
-        object-fit: cover;
+        border: 1px solid green;
+        .__img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            // margin: 25% 0 0;
+
+            // height: 300px;
+            object-fit: cover;
+            border: 1px solid red;
+        }
     }
     .__container {
         // background-color: $silver;
